# battleship

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  HISTORY.md  IMPLEMENTATIONS.md  INSTALLATION.md
include/: GameCore.h
include/field/: BattleField.h
include/modes/: AdvancedField.h  IntermediateField.h  TutorialField.h
include/utils/: GameUtils.h
src/: main.cpp
src/field/: BattleField.cpp
src/modes/: AdvancedField.cpp  IntermediateField.cpp  TutorialField.cpp
src/utils/: GameUtility.cpp
tests/: terminal_integration.cpp  terminal_logic.cpp
